# atlas_app

./: .gitignore  README.md  main.py  pyproject.toml  run-mcp-inspector.sh  run_app.sh  run_main_ui.sh
agents/atlas_agent/: agent.py  tools.py
agents/maps_agent/: a2a_server.py  agent.py
agents/weather_agent/: a2a_server.py  agent.py
mcp/maps_server/: server.py  tools.py
mcp/weather_server/: server.py  tools.py
ui/: installed-versions.txt  package-lock.json  package.json
ui/app/: layout.tsx  page.tsx
ui/app/api/copilotkit/: route.ts
ui/components/AgentDebugger/: index.tsx
ui/components/GoogleMap/: index.tsx
ui/components/WeatherCard/: index.tsx
ui/components/a2a/: MessageFromA2A.tsx  MessageToA2A.tsx  agent-styles.ts
