[project]
name = "atlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.20",
    "ag-ui-adk>=0.3.6",
    "fastmcp>=2.13.3",
    "google-adk[a2a]>=1.19.0",
    "google-genai>=1.52.0",
    "googlemaps>=4.10.0",
]
